Updated frontend to allow authors to change their translations
